spotmax-cicd/example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example-ingress
  namespace: ingress
spec:
  rules:
    - host: example.kmax.com
      http:
        paths:
          - backend:
              serviceName: hello-jenkins
              servicePort: 8080
            path: /
