spotmax-cicd/ingress-es.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: es
  namespace: default
spec:
  rules:
    - host: es.spotmaxtech.com
      http:
        paths:
          - backend:
              serviceName: elasticsearch-master
              servicePort: 9200
            path: /
