spotmax-cicd/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins
  namespace: default
spec:
  rules:
    - host: jenkins-k8s.spotmaxtech.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
