spotmax-cicd/ingress-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - yourname"
  name: kibana
  namespace: default
spec:
  rules:
    - host: kibana.spotmaxtech.com
      http:
        paths:
          - backend:
              serviceName: kibana-kibana
              servicePort: 5601
            path: /
